--- a/galeria.html
+++ b/galeria.html
@@ -3,14 +3,22 @@
   <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-      <title>Principal</title>
+      <title>Minecraft</title>
       <link rel="stylesheet" href="estils.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="estils.css">
   </head>
   <body> 
     <div class="estilos">
-        <a href="index.html">Home</a>
-        <a href="galeria.html">Galeria</a>
-        <a href="guia-estil.html">Guia de estilos</a>
+        <a href="index.html" class="bungee-spice-regular">Home</a>
+        <a href="galeria.html" class="bungee-spice-regular">Galeria</a>
+        <a href="guia-estil.html" class="bungee-spice-regular">Guia de estilos</a>
     </div>
     </div>
     <div class="first-section">
