--- a/galeria.html
+++ b/galeria.html
@@ -15,16 +15,13 @@
     <link rel="stylesheet" href="estils.css">
   </head>
   <body> 
-    <div class="estilos">
-        <a href="index.html" class="bungee-spice-regular">Home</a>
-        <a href="galeria.html" class="bungee-spice-regular">Galeria</a>
-        <a href="guia-estil.html" class="bungee-spice-regular">Guia de estilos</a>
-    </div>
-    </div>
-    <div class="first-section">
-        <h1>Hola mundo</h1>
-    </div>
+    <!-- Barra superior que ya tienes -->
+  <div class="estilos">
+      <a href="index.html" class="bungee-spice-regular">Home</a>
+      <a href="galeria.html" class="bungee-spice-regular">Galeria</a>
+      <a href="guia-estil.html" class="bungee-spice-regular">Guia de estilos</a>
+  </div>
     
-
-
+  
+    
 </body>
