--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=settings" />
     <link rel="stylesheet" href="styles.css">
     <title>Minecraft Web</title>
   </head>
@@ -55,7 +56,7 @@
   <!-- 📚 Menú secundari -->
   <nav class="submenu">
     
-    <a href="https://es.wikipedia.org/wiki/Minecraft">Història</a>
+    <a href="https://es.wikipedia.org/wiki/Minecraft"><span class="material-symbols-outlined">settings</span>Història</a>
     <a href="https://minecraft.fandom.com/es/wiki/Criatura">Mobs</a>
     <a href="https://minecraft.fandom.com/es/wiki/Arma">Armes</a>
     <a href="https://minecraft.fandom.com/wiki/Biome">Biomes</a>
