--- a/guia-estil.html
+++ b/guia-estil.html
@@ -10,6 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!-- Google Font -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Playwrite+US+Trad+Guides&display=swap" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -38,7 +44,7 @@
         <h1>Minecraft
           <img src="assets/IMG/34.png" alt="">
         </h1>
-        <h2 class="cinzel-decorative-black">Minecraft és un videojoc de construcció i supervivència on els jugadors poden explorar un món infinit generat proceduralment.</h2>
+        <h2 class="playwrite-us-trad-guides-regular">Minecraft és un videojoc de construcció i supervivència on els jugadors poden explorar un món infinit generat proceduralment.</h2>
       </div>
       <div class="cajitas">
         
@@ -51,7 +57,7 @@
         <h1>Monstruos
           <img src="assets/IMG/34.png" alt="">
         </h1>
-        <h2 class="cinzel-decorative-black">L’aventura inclou explorar biomes, lluitar contra criatures i obtenir recursos per progressar.L’aventura inclou explorar biomes, lluitar contra criatures i obtenir recursos per progressar.</h2>
+        <h2 class="oswald-uniquifier">L’aventura inclou explorar biomes, lluitar contra criatures i obtenir recursos per progressar.L’aventura inclou explorar biomes, lluitar contra criatures i obtenir recursos per progressar.</h2>
       </div>
       
     </section>
