--- a/guia-estil.html
+++ b/guia-estil.html
@@ -28,6 +28,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estils.css">
     
+    
   </head>
   <body> 
     <div class="estilos">
@@ -64,12 +65,11 @@
 
     <div class="botones-último">
       <div class="boton">
-        <span class="material-symbols-outlined">savings</span>
+        <span class="material-symbols-outlined" class="ico">savings</span>
         <a href="https://www.minecraft.net/es-es">Minecraft</a>
       </div>
        <div class="boton">
-        <span class="material-symbols-outlined">
-euro
+        <span class="material-symbols-outlined">euro</span>
 </span>
         <a href="https://www.amazon.es/cubos-magneticos-minecraft/s?k=cubos+magneticos+minecraft">Cubos</a>
       </div>
