Iconos baseline estilos

--- a/guia-estil.html
+++ b/guia-estil.html
@@ -38,10 +38,21 @@
     <h1 class="cinzel-decorative-black">Guia d’estil del món de Minecraft</h1>
    </section>
    <!-- Aquí hacemos los 3 pesos -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=ho" />
+    
    <section class="robot">
-      <h1 class="roboto-light">Minecraft</h1>
-      <h2 class="roboto-regular">Cubos</h2>
-      <h3 class="roboto-bold">Monstruos</h3>
+      <div class="Box">
+        <span class="material-symbols-outlined">home</span>
+        <h1 class="roboto-light">Minecraft</h1>
+      </div>
+      <div class="Box1">
+        <span class="material-symbols-outlined">menu</span>
+        <h2 class="roboto-regular">Cubos</h2>
+      </div>
+      <div class="Box2">
+        <span class="material-symbols-outlined">settings</span>
+        <h3 class="roboto-bold">Monstruos</h3>
+      </div>
    </section>
    
     <section class="cajas-último">
@@ -69,12 +80,9 @@
 
     <div class="botones-último">
       <div class="boton">
-        <span class="material-symbols-outlined" class="ico">savings</span>
         <a href="https://www.minecraft.net/es-es">Minecraft</a>
       </div>
        <div class="boton">
-        <span class="material-symbols-outlined">euro</span>
-</span>
         <a href="https://www.amazon.es/cubos-magneticos-minecraft/s?k=cubos+magneticos+minecraft">Cubos</a>
       </div>
        <div class="boton">
