--- a/guia-estil.html
+++ b/guia-estil.html
@@ -57,9 +57,7 @@
    
     <section class="cajas-último">
       <div class="cajitas">
-        <h1>Minecraft
-          
-        </h1>
+        <h1>Minecraft</h1>
         <h2 class="playwrite-us-trad-guides-regular">Minecraft és un videojoc de construcció i supervivència on els jugadors poden explorar un món infinit generat proceduralment.</h2>
       </div>
       <div class="cajitas">
