--- a/galeria.html
+++ b/galeria.html
@@ -21,6 +21,36 @@
       <a href="galeria.html" class="bungee-spice-regular">Galeria</a>
       <a href="guia-estil.html" class="bungee-spice-regular">Guia de estilos</a>
   </div>
+
+  <h1>Galeria d'Animacions</h1>
+
+  <!-- ================================ -->
+  <!-- 1️⃣ LOADER PUR CSS               -->
+  <!-- ================================ -->
+  <section class="apartat">
+    <h2>1. Loader CSS (rotació)</h2>
+    <div class="loader"></div>
+  </section>
+
+  <!-- ================================ -->
+  <!-- 2️⃣ ANIMACIÓ PRINCIPAL COMPLETA  -->
+  <!-- ================================ -->
+  <section class="apartat">
+    <h2>2. Animació principal (transform + opacity + colors)</h2>
+    <div class="anim-principal"></div>
+  </section>
+
+  <!-- ================================ -->
+  <!-- 3️⃣ SCROLL REVEAL amb timeline   -->
+  <!-- ================================ -->
+  <section class="apartat">
+    <h2>3. Scroll Reveal (animation-timeline: view())</h2>
+
+    <div class="reveal">Bloc 1</div>
+    <div class="reveal">Bloc 2</div>
+    <div class="reveal">Bloc 3</div>
+  </section>
+
     
   
     
