--- a/galeria.html
+++ b/galeria.html
@@ -24,25 +24,25 @@
 
   <h1>Galeria d'Animacions</h1>
 
-  <!-- ================================ -->
+ 
   <!-- 1️⃣ LOADER PUR CSS               -->
-  <!-- ================================ -->
+ 
   <section class="apartat">
     <h2>1. Loader CSS (rotació)</h2>
     <div class="loader"></div>
   </section>
 
-  <!-- ================================ -->
-  <!-- 2️⃣ ANIMACIÓ PRINCIPAL COMPLETA  -->
-  <!-- ================================ -->
+  
+  <!--  ANIMACIÓ PRINCIPAL COMPLETA  -->
+ 
   <section class="apartat">
     <h2>2. Animació principal (transform + opacity + colors)</h2>
     <div class="anim-principal"></div>
   </section>
 
-  <!-- ================================ -->
-  <!-- 3️⃣ SCROLL REVEAL amb timeline   -->
-  <!-- ================================ -->
+
+  <!--  SCROLL REVEAL amb timeline   -->
+
   <section class="apartat">
     <h2>3. Scroll Reveal (animation-timeline: view())</h2>
 
